@@ -8,6 +8,7 @@
   - add complex double and float operation +, -, *, /
   - rename new_dcomplex to complex
   - rename new_fcomplex to complexf
+  - add SPVM::Unicode::uchar
 0.0433 2018-05-08
   - Change IO::File::write, IO::Socket::write to 
       sub write : int ($self : self, $buffer : string, $legnth : int);
